- InventoryAPI.reset now clears all the registered buttons - Added Reflection.getMethod and Reflection.getDeclaredMethod with boolean param to toggle the stacktrace. If true no stacktrace is printed when it fails. - Minor improvements